fix(modal): fix modal overflow issue causing bottom corners to not be rounded

--- a/src/style.css
+++ b/src/style.css
@@ -66,7 +66,7 @@
   }
 
   .modal {
-    @apply fixed left-1/2 top-1/2 z-50 mx-4 my-0 max-h-[90svh] w-[calc(100%-2rem)] max-w-2xl -translate-x-[calc(50%+1rem)] -translate-y-1/2 gap-4 overflow-scroll overflow-y-auto rounded-2xl border bg-stone-50 p-6 shadow-md transition duration-200 ease-in-out sm:mx-0 sm:mb-0 sm:max-h-none sm:w-full sm:-translate-x-1/2;
+    @apply fixed left-1/2 top-1/2 z-50 mx-4 my-0 max-h-[90svh] w-[calc(100%-2rem)] max-w-2xl -translate-x-[calc(50%+1rem)] -translate-y-1/2 gap-4 overflow-y-auto rounded-2xl border bg-stone-50 p-6 shadow-md transition duration-200 ease-in-out sm:mx-0 sm:mb-0 sm:max-h-none sm:w-full sm:-translate-x-1/2;
   }
 
   .modal-hidden {
